@@ -410,12 +410,14 @@ IF(${BACKEND_OPTION} AND NOT ${BACKEND_OPTION}_FOUND)
        #include <${BACKEND_HEADER}>
        int main(){return 0;}
        ")
-  # FIXME: What about defines?
+
+  ADD_DEFINITIONS(${${BACKEND_OPTION}_DEFINES})
   TRY_COMPILE(HAVE_BACKEND_HEADER
               ${CMAKE_BINARY_DIR}
               ${CMAKE_BINARY_DIR}/CMakeTmp/src.c
               CMAKE_FLAGS
               "-DINCLUDE_DIRECTORIES:STRING=${${BACKEND_OPTION}_INCLUDE_DIRS}")
+  REMOVE_DEFINITIONS(${${BACKEND_OPTION}_DEFINES})
 
   IF(HAVE_BACKEND_HEADER)
     IF(HAVE_LIB_DL AND ${BACKEND_OPTION}_DLOPEN)
@@ -435,7 +437,8 @@ IF(${BACKEND_OPTION} AND NOT ${BACKEND_OPTION}_FOUND)
           "
           int main(){${BACKEND_TEST_FUNC}();return 0;}
           ")
-        # FIXME: What about defines?
+
+        ADD_DEFINITIONS(${${BACKEND_OPTION}_DEFINES})
         TRY_COMPILE(BACKEND_LINKS
           ${CMAKE_BINARY_DIR}
           ${CMAKE_BINARY_DIR}/CMakeTmp/src.c
@@ -443,6 +446,7 @@ IF(${BACKEND_OPTION} AND NOT ${BACKEND_OPTION}_FOUND)
           "-DINCLUDE_DIRECTORIES:STRING=${${BACKEND_OPTION}_INCLUDE_DIRS}"
           "-DLINK_DIRECTORIES:STRING=${${BACKEND_OPTION}_LINK_DIRS}"
           "-DLINK_LIBRARIES:STRING=${${BACKEND_OPTION}_LIBS}")
+        REMOVE_DEFINITIONS(${${BACKEND_OPTION}_DEFINES})
 
         IF(BACKEND_LINKS)
           SET(${BACKEND_OPTION}_FOUND ON CACHE INTERNAL "")
@@ -465,14 +469,10 @@ IF(${BACKEND_OPTION} AND ${BACKEND_OPTION}_FOUND)
   ADD_DEFINE(ENABLE_EXTENSION_AL_EXT_${BACKEND_OPTION})
   INCLUDE_DIRECTORIES(${${BACKEND_OPTION}_INCLUDE_DIRS})
 
-  FOREACH(BACKEND_DEFINE ${${BACKEND_OPTION}_DEFINES})
-    IF(NOT ${BACKEND_DEFINE} MATCHES "^ $")
-      ADD_DEFINITIONS(${BACKEND_DEFINE})
-    ENDIF(NOT ${BACKEND_DEFINE} MATCHES "^ $")
-  ENDFOREACH(BACKEND_DEFINE)
+  ADD_DEFINITIONS(${${BACKEND_OPTION}_DEFINES})
 
   IF(HAVE_LIB_DL AND ${BACKEND_OPTION}_DLOPEN)
-    ADD_DEFINE("OPENAL_DLOPEN_${BACKEND_OPTION} 1")
+    ADD_DEFINE(OPENAL_DLOPEN_${BACKEND_OPTION})
     MESSAGE(STATUS "${BACKEND_OPTION} support - dynamic")
   ELSE(HAVE_LIB_DL AND ${BACKEND_OPTION}_DLOPEN)
 
