@@ -1,3 +1,11 @@
+2006-01-12  Prakash Punnoor <prakash@punnoor.de>
+
+	* src/extensions/al_ext_vorbis.c, src/backends/alc_backend_alsa.c,
+	src/backends/alc_backend_arts.c, src/backends/alc_backend_esd.c,
+	src/backends/alc_backend_sdl.c: #if -> #ifdef
+	
+	* CMakeLists.txt: improve defines handling
+
 2006-01-11  Prakash Punnoor <prakash@punnoor.de>
 
 	* src/al_siteconfig.h: #if -> #ifdef
